1.框架搭建完毕。2.完成一级菜单和二级菜单的配置。3.引入angular-ui-bootstrap插件

--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,10 @@
   "dependencies":{
     "bower-website-ui": "master",
     "angular-ui-router": "~0.2.10",
-    "echarts": "3.1.2"
+    "echarts": "3.1.2",
+    "angular-ui-bootstrap-bower": ""
+  },
+  "resolutions": {
+    "angular": "1.5.2"
   }
 }
